--- a/package.json
+++ b/package.json
@@ -15,24 +15,24 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.0",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
-		"@typescript-eslint/parser": "^7.0.0",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0-next.4",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"@playwright/test": "1.55.1",
+		"@sveltejs/adapter-auto": "6.1.0",
+		"@sveltejs/kit": "2.43.6",
+		"@sveltejs/vite-plugin-svelte": "6.2.1",
+		"@types/eslint": "9.6.1",
+		"@typescript-eslint/eslint-plugin": "8.45.0",
+		"@typescript-eslint/parser": "8.45.0",
+		"eslint": "9.36.0",
+		"eslint-config-prettier": "10.1.8",
+		"eslint-plugin-svelte": "3.12.4",
+		"prettier": "3.6.2",
+		"prettier-plugin-svelte": "3.4.0",
+		"svelte": "5.39.7",
+		"svelte-check": "4.3.2",
+		"tslib": "2.8.1",
+		"typescript": "5.9.3",
+		"vite": "7.1.7",
+		"vitest": "3.2.4"
 	},
 	"type": "module"
 }
