Remove dot from Cargo package description

--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -3,7 +3,7 @@ name = "normalizer"
 version = "0.1.0"
 authors = ["Vladimir Zarypov <krre31@gmail.com>"]
 edition = "2024"
-description = "Web IDE for Norm programming language."
+description = "Web IDE for Norm programming language"
 repository = "https://github.com/krre/normalizer.js"
 
 [lib]
