--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Vladimir Zarypov <krre31@gmail.com>"]
 edition = "2024"
 description = "Web IDE for Norm programming language"
-repository = "https://github.com/krre/normalizer.js"
+repository = "https://github.com/krre/normalizer-web"
 
 [lib]
 crate-type = ["cdylib"]
